objects/SVMXC__Service_Contract__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Service Contract documents details of entitlement provided to a customer for products bought. Usually shipped/delivered products are covered for a predefined period through a basic warranty. If customers wish to get coverage for repairs beyond the normal warranty period, they normally purchase extended service contracts. Service contract is interchangeably referred to as a service agreement as well.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>This field will have the Account Name so that we can search the Contracts on basis of this field because we can use Account (look-up) field in a search criteria for Contract Object.</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accreditation__c</fullName>
        <label>Accreditation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Accreditation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alert__c</fullName>
        <formula>IF (
ISPICKVAL( SVMXC__Company__r.Status__c , &apos;blocked&apos;),
&apos;🚨 Account Blocked 🚨&apos;,
&apos;Ok ✅&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BE_DEF_Navision_Ref_Num__c</fullName>
        <label>BE DEF Navision Ref Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Back_Office_Country__c</fullName>
        <label>Back Office Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Office_System__c</fullName>
        <label>Back Office System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill-to</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts (Bill-to)</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Header_Contract_Line__c</fullName>
        <formula>SVMX_PS_Parent_Contract__r.Name+&quot; - &quot;+ Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Header-Contract Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Line_Number__c</fullName>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Contract Line Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>DEF_Company__c</fullName>
        <label>DEF Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Notice__c</fullName>
        <description>Date on which the client notices of his</description>
        <label>Date of Notice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Installation_Discipline__c</fullName>
        <label>Installation Discipline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Installation_Discipline</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installation_Type__c</fullName>
        <label>Installation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bucket</fullName>
                </value>
                <value>
                    <fullName>Units</fullName>
                    <isActive>false</isActive>
                    <label>Units</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installation</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Service Contract</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Evergreen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Evergreen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Discount_Percentage__c</fullName>
        <label>Part Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Preferred_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts (Preferred Technician)</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Cancellation__c</fullName>
        <description>Reason communicated by the client for cancelling the contract</description>
        <label>Reason for Cancellation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Poor Performance</fullName>
                </value>
                <value>
                    <fullName>Business Status</fullName>
                </value>
                <value>
                    <fullName>Missing feature set</fullName>
                </value>
                <value>
                    <fullName>Out of state coverage</fullName>
                </value>
                <value>
                    <fullName>Unserviceable - Facilities</fullName>
                </value>
                <value>
                    <fullName>Unserviceable - Product/Design</fullName>
                </value>
                <value>
                    <fullName>Unserviceable - Construction</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordType_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Price_Increase_Percentage__c</fullName>
        <label>Renewal Price Increase %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SVMXC__Activation_Notes__c</fullName>
        <description>Service/Maintenance Contract Activation Notes</description>
        <inlineHelpText>Service/Maintenance Contract Activation Notes</inlineHelpText>
        <label>Activation Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating if this contract is currently active or not. This flag is checked automatically when you activate a contract</description>
        <inlineHelpText>Flag indicating if this contract is currently active or not. This flag is checked automatically when you activate a contract</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__All_Contacts_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates if all contacts from this customer are entitled for support. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag that indicates if all contacts from this customer are entitled for support. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>All Contacts Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__All_Products_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates if this contract covers all products purchased by this customer.</description>
        <inlineHelpText>Flag that indicates if this contract covers all products purchased by this customer.</inlineHelpText>
        <label>All Products Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__All_Services_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates if the customer is entitled to all types of services offered. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag that indicates if the customer is entitled to all types of services offered. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>All Services Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__All_Sites_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates if all customer locations are covered by this contract. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag that indicates if all customer locations are covered by this contract. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>All Sites Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Billing_Schedule__c</fullName>
        <description>Indicates the frequency of how the customer prefers to be invoiced for the contract amount</description>
        <inlineHelpText>Indicates the frequency of how the customer prefers to be invoiced for the contract amount</inlineHelpText>
        <label>Billing Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Semi Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Full Upfront</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Cancelation_Notes__c</fullName>
        <description>Service/Maintenance Contract Cancelation Notes</description>
        <inlineHelpText>Service/Maintenance Contract Cancelation Notes</inlineHelpText>
        <label>Cancelation Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Canceled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the salesforce user  that canceled this service contract</description>
        <inlineHelpText>Name of the salesforce user  that canceled this service contract</inlineHelpText>
        <label>Canceled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000001hzcwEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Canceled_On__c</fullName>
        <description>Date/time on which this service contract was canceled</description>
        <inlineHelpText>Date/time on which this service contract was canceled</inlineHelpText>
        <label>Canceled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer to whom this service contract is sold. Is a lookup to an existing salesforce account record</description>
        <inlineHelpText>Customer to whom this service contract is sold. Is a lookup to an existing salesforce account record</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts</relationshipLabel>
        <relationshipName>R00N70000001hzYIEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the contact person from the customer account associated with this contract. Is a lookup to an existing salesforce contact record</description>
        <inlineHelpText>Name of the contact person from the customer account associated with this contract. Is a lookup to an existing salesforce contact record</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N70000001hzcEEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Contract_Price2__c</fullName>
        <description>Total price of the service contract before discount</description>
        <inlineHelpText>Total price of the service contract before discount</inlineHelpText>
        <label>Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Contract_Price__c</fullName>
        <description>Total price of the service contract before discount</description>
        <inlineHelpText>Total price of the service contract before discount</inlineHelpText>
        <label>Contract Price(DO NOT USE)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Counter_Usages_Processed_Until__c</fullName>
        <label>Counter Usages Processed Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Default_Group_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Not used</description>
        <label>Default Group Member</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Service Contracts (Default Group Member)</relationshipLabel>
        <relationshipName>Service_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Default_Parts_Price_Book__c</fullName>
        <description>Default price book to be used when no parts price is defined</description>
        <label>Default Parts Price Book</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Default_Service_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Not used</description>
        <label>Default Service Group</label>
        <referenceTo>SVMXC__Service_Group__c</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>Service_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Default_Travel_Price__c</fullName>
        <label>Default Travel Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Default_Travel_Unit__c</fullName>
        <label>Default Travel Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Rate</fullName>
                </value>
                <value>
                    <fullName>Per Hour</fullName>
                </value>
                <value>
                    <fullName>Tiered Per Mile/Km</fullName>
                </value>
                <value>
                    <fullName>Zone Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Discount__c</fullName>
        <description>Percentage discount to be applied on the contract price</description>
        <inlineHelpText>Percentage discount on the contract price</inlineHelpText>
        <label>Discount%</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SVMXC__Discounted_Price2__c</fullName>
        <description>Contract Price minus discount. Calculated automatically</description>
        <formula>SVMXC__Contract_Price2__c - (SVMXC__Contract_Price2__c * SVMXC__Discount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract Price minus discount. Calculated automatically</inlineHelpText>
        <label>Discounted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Discounted_Price__c</fullName>
        <description>Contract Price minus discount. Calculated automatically</description>
        <inlineHelpText>Contract Price minus discount. Calculated automatically</inlineHelpText>
        <label>Discounted Price(DO NOT USE)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__End_Date__c</fullName>
        <description>End date of the service contract</description>
        <inlineHelpText>End date of the service contract</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__EndpointURL__c</fullName>
        <description>Not used</description>
        <formula>$Api.Enterprise_Server_URL_70</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndpointURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Exchange_Type__c</fullName>
        <description>Type of exchange allowed as per the service contract</description>
        <label>Exchange Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance Exchange</fullName>
                </value>
                <value>
                    <fullName>Return Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Labor_Rounding_Type__c</fullName>
        <label>Rounding Type (Labor)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Round Up</fullName>
                </value>
                <value>
                    <fullName>Round Down</fullName>
                </value>
                <value>
                    <fullName>Actuals</fullName>
                    <default>true</default>
                    <label>Actuals</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Minimum_Labor__c</fullName>
        <description>Minimum labor price for overtime</description>
        <label>Minimum Labor (Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Minimum_Travel__c</fullName>
        <description>Minimum labor price for travel</description>
        <label>Minimum Travel (Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Primary_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary technician for this service contract. Reference to an existing Technician record in ServiceMax</description>
        <label>Primary Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Service Contracts (Primary Technician)</relationshipLabel>
        <relationshipName>Service_Contract_Primary_Tech</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Renewal_Date__c</fullName>
        <description>Date on which the contract was renewed</description>
        <inlineHelpText>Date on which the contract was renewed</inlineHelpText>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Renewal_Notes__c</fullName>
        <description>Service/Maintenance Contract Renewal Notes</description>
        <inlineHelpText>Service/Maintenance Contract Renewal Notes</inlineHelpText>
        <label>Renewal Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Renewal_Number__c</fullName>
        <description>This is incremented automatically when an existing service contract is renewed</description>
        <inlineHelpText>This is incremented automatically when an existing service contract is renewed</inlineHelpText>
        <label>Renewal Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Renewed_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The original service contract from which this contract was renewed. Is populated automatically when a service contract is renewed</description>
        <inlineHelpText>The original service contract from which this contract was renewed. Is populated automatically when a service contract is renewed</inlineHelpText>
        <label>Renewed From</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Renewal History</relationshipLabel>
        <relationshipName>R00N70000001hzdoEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Round_Labor_To_Nearest__c</fullName>
        <description>Maximum minutes a technician can work as overtime</description>
        <label>Round Labor To Nearest (Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Round_Travel_To_Nearest__c</fullName>
        <description>Upon travel based on timing, what is the increment used to round off travel time</description>
        <label>Round Travel to Nearest (Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SESSION_ID__c</fullName>
        <description>Not used</description>
        <formula>$Api.Session_ID</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SESSION ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the internal sales representative responsible for or involved in selling this contract. Is a lookup to a valid salesforce user</description>
        <inlineHelpText>Name of the internal sales representative responsible for or involved in selling this contract. Is a lookup to a valid salesforce user</inlineHelpText>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000001hzbvEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to bind check box in List of Service Contract Line records on Visualforce page with controller.</description>
        <inlineHelpText>Field to bind check box in List of Service Contract Line records on Visualforce page with controller.</inlineHelpText>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract_Notes__c</fullName>
        <description>Free text that shows any exceptions or conditions that apply when entitling the customer based on this contract. Information entered here is displayed on the Case Entitlement when this contract is used.</description>
        <inlineHelpText>Define exceptions or conditions that apply when entitling the customer based on this contract. Information entered here is displayed on the Case Entitlement when this contract is used.</inlineHelpText>
        <label>Service Contract Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service level the customer is entitled to by this contract. Is a lookup to an existing service level record</description>
        <inlineHelpText>Service level the customer is entitled to by this contract. Is a lookup to an existing service level record</inlineHelpText>
        <label>SLA Terms</label>
        <referenceTo>SVMXC__Service_Level__c</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts</relationshipLabel>
        <relationshipName>R00N70000001hzdfEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Plan</label>
        <referenceTo>SVMXC__Service_Plan__c</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Pricebook</label>
        <referenceTo>SVMXC__Service_Pricebook__c</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Start_Date__c</fullName>
        <description>Start date of the service contract</description>
        <inlineHelpText>Start date of the service contract</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Travel_Rounding_Type__c</fullName>
        <label>Rounding Type (Travel)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Round Up</fullName>
                </value>
                <value>
                    <fullName>Round Down</fullName>
                </value>
                <value>
                    <fullName>Actuals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Weeks_To_Renewal__c</fullName>
        <description>Number of weeks before the contract expires. Calculated automatically</description>
        <formula>(SVMXC__End_Date__c - TODAY()) / 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weeks To Renewal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Zone__c</fullName>
        <label>Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Zone 1</fullName>
                </value>
                <value>
                    <fullName>Zone 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_Contract_Renewed__c</fullName>
        <description>This is used to calculate Contract Renewal Rate. If there is a Renewal Date field it will return a value of 1. If the field is blank the value of 0 is returned.</description>
        <formula>IF( ISNULL( SVMXC__Renewal_Date__c ) , 0, 1)</formula>
        <label>Contract Renewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Expiring_Soon__c</fullName>
        <formula>IMAGE(
if( SVMXC__End_Date__c &gt;= TODAY()+91, &quot;/resource/ServiceMaxIcons/OK.png&quot;,
if( SVMXC__End_Date__c &lt; TODAY()+90, &quot;/resource/ServiceMaxIcons/No.png&quot;,
&quot;/s.gif&quot;)
),
&quot;Expiration Flag&quot;, 16,16) +
/*if( SVMXC__End_Date__c &gt;= TODAY()+91, &quot; No&quot;, &quot; Yes&quot;) */
if( SVMXC__End_Date__c &lt; TODAY(), &quot; Expired&quot;, if( SVMXC__End_Date__c &gt;= TODAY()+91, &quot; No&quot;, &quot; Yes&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiring Soon?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SVMX_PS_Parent_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Contract Line</relationshipLabel>
        <relationshipName>ContractLine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Renewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Upsell_Potential__c</fullName>
        <formula>IMAGE(
if( SVMXC__End_Date__c &lt; TODAY()+90, &quot;/resource/ServiceMaxIcons/YesUpsell.png&quot;,
if( SVMXC__End_Date__c &gt; TODAY()+90, &quot;/resource/ServiceMaxIcons/NoUpsell.png&quot;,
&quot;/s.gif&quot;)
),
&quot;UpSell Potential&quot;, 20, 20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upsell Potential</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Maintenance_Contract_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Contract Line</description>
        <label>Service/Maintenance Contract Line</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Service Maintenance Contract Lines</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signature_Date__c</fullName>
        <label>Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Top-Level</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts (Top-Level)</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>